--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "recharts": "^3.4.1",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.23.0",
+    "swiper": "^12.0.3",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
